# noboty

./: README.md  pyproject.toml
data/: SurvivalGuide_2024_EN.txt  nowhereNUDES.txt
src/: dialect.py  main.py
src/telegram_scrapper/: scrapper.py
